--- a/index.html
+++ b/index.html
@@ -361,9 +361,9 @@
                     </section>
                     <!-- Portfolio End -->
 
-                    <!-- Testimonial Start -->
+                    <!-- recommendation Start -->
                     <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
-                        <h1 class="title pb-3 mb-5">Testimonial</h1>
+                        <h1 class="title pb-3 mb-5">Recommendation</h1>
                         <div class="owl-carousel testimonial-carousel">
                             <div class="text-left">
                                 <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
