--- a/index.html
+++ b/index.html
@@ -321,12 +321,12 @@
                                     </div>
                                     <div class="col-md-6 mb-4 portfolio-item second">
                                         <div class="position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/portfolio-4.jpg" alt="">
+                                            <img class="img-fluid w-100" src="img/pfm2.jpg" alt="">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
                                                 <a href="img/portfolio-4.jpg" data-lightbox="portfolio">
                                                     <i class="bi bi-plus text-light"></i>
                                                 </a>
-                                                <a href="https://victoryeung0725.github.io/Marvel-Movie-Project/hawkeye.html" target="_blank" class="pfg">View</a> 
+                                                <a href="https://goodqthe123.github.io/eatwt2.github.io/" target="_blank" class="pfg">View</a> 
                                                 <!-- <button class="pfg" onclick="document.location='https://victoryeung0725.github.io/Marvel-Movie-Project/hawkeye.html'"   target="_blank">View</button>-->
                                             </div>
                                         </div>
