--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
+
+        <script src="https://kit.fontawesome.com/cbd440524f.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -51,11 +53,11 @@
                         </div>
                         <div class="d-flex justify-content-center mt-auto mb-3">
                         
-                            <a class="btn btn-secondary btn-square mx-1" href="https://api.whatsapp.com/send?phone=85294169988&text=Hello%20James!%20"><i class="far fa-comment"></i></a>
-                            <a class="btn btn-secondary btn-square mx-1" href="https://www.facebook.com/kiuyatkwong/"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-secondary btn-square mx-1" href="https://api.whatsapp.com/send?phone=85294169988&text=Hello%20James!%20"><i class="fa-brands fa-whatsapp"></i></a>
+                            <a class="btn btn-secondary btn-square mx-1" href="https://github.com/goodqthe123?tab=repositories"><i class="fa-brands fa-github"></i></a>
                             <a class="btn btn-secondary btn-square mx-1" href="https://www.linkedin.com/in/james-kwong-147989252/"><i class="fab fa-linkedin-in"></i></a>
                             <a class="btn btn-secondary btn-square mx-1" href="mailto:kiuyatkwong69@gmail.com"><i class="far fa-envelope-open"></i></a>
-                        </div>
+                        </div>    
                         <div class="d-flex align-items-end justify-content-between border-top">
                             <a href="" class="btn w-50 border-end">Download CV</a>
                             <a href="mailto:kiuyatkwong69@gmail.com" class="btn w-50 btn-scroll">Contact Me</a>
