--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                         <p>I am seeking a competitive and challenging environment where I can serve your
                             organization and establish a career for myself.
                             <br>
-                            <br> Comfortable: HTML, CSS, JavaScript, ES6, React, Bootstrap
-                            <br> Familiar: node.js, Redux, Node.js, React Bootstrap, React Native
-                            <br>Tools: Git, Linux, VS Code, Chrome Dev Tools, Wordpress</p>
+                            <br> Comfortable: HTML, CSS, JavaScript, ES6, ReactJs, Bootstrap
+                            <br> Familiar: Redux, React Bootstrap, React Native
+                            <br>Tools: Git, Github, VS Code, Chrome Dev Tools, Wordpress</p>
                             <br>
                         <div class="row mb-4">
                             <div class="col-sm-6 py-1">
