--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                                                 <a href="img/pjm1.jpg" data-lightbox="portfolio">
                                                     <i class="bi bi-plus text-light"></i>
                                                 </a>
-                                                <a href="https://goodqthe123.github.io/eatwhat.github.io/test3.html" target="_blank" class="pfg">View</a> 
+                                                <a href="https://goodqthe123.github.io/AIStyle.github.io/" target="_blank" class="pfg">View</a> 
                                                 <!--<button class="pfg" onclick="document.location='https://goodqthe123.github.io/eatwhat.github.io/test3.html'"    target="_blank">View</button>-->
                                             </div>
                                         </div>
