--- a/index.html
+++ b/index.html
@@ -378,14 +378,14 @@
                             </div>
                             <div class="text-left">
                                 <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                                <p class="fs-4 mb-4">I love Jame's passion on this field. Even thought he's just learning about it, I can have strong confidence he is capable on managing difficult situation especially on technical aspect. I have no reservation to recommend him to any company as he is a valuable asset to the team.</p>
+                                <p class="fs-4 mb-4">As a mentor, I am constantly impressed by how resourceful James is. He asks good questions and he is driven and quick in coming up with solutions and making things work. He has shown passion, enthusiasm, and enormous commitment to this field and I believe James would be a valuable asset to any IT start-up/company.</p>
                                 
                                 
                                 <div class="d-flex align-items-center">
-                                    <img class="img-fluid" src="img/1575247935172.jpg" style="width: 60px; height: 60px;">
+                                    <img class="img-fluid" src="img/1582985747669.jpg" style="width: 60px; height: 60px;">
                                     <div class="ps-3">
-                                        <p class="text-primary fs-5 mb-1">professor Name</p>
-                                        <i>Inness Chu</i>
+                                        <p class="text-primary fs-5 mb-1">Mentor</p>
+                                        <i>Leslie Yeung</i>
                                     </div>
                                 </div>
                             </div>
