--- a/index.html
+++ b/index.html
@@ -331,12 +331,12 @@
                                     </div>
                                     <div class="col-md-6 mb-4 portfolio-item first">
                                         <div class="position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/pf3.jpg" alt="pf1">
+                                            <img class="img-fluid w-100" src="img/pf4.jpg" alt="pf1">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/pf3.jpg" data-lightbox="portfolio">
+                                                <a href="img/pf4.jpg" data-lightbox="portfolio">
                                                     <i class="bi bi-plus text-light"></i>
                                                 </a>
-                                                <a href="https://goodqthe123.github.io/capstone_colmar_assets.github.io/" target="_blank" class="pfg">View</a> 
+                                                <a href="https://goodqthe123.github.io/crystal_website_main/" target="_blank" class="pfg">View</a> 
                                                <!--  <button class="pfg" onclick="document.location='https://goodqthe123.github.io/capstone_colmar_assets.github.io/'"    target="_blank">View</button>-->
                                             </div>
                                         </div>
@@ -371,7 +371,7 @@
                                 <div class="d-flex align-items-center">
                                     <img class="img-fluid" src="img/1575247935172.jpg" style="width: 60px; height: 60px;">
                                     <div class="ps-3">
-                                        <p class="text-primary fs-5 mb-1">professor Name</p>
+                                        <p class="text-primary fs-5 mb-1">Professor Name</p>
                                         <i>Inness Chu</i>
                                     </div>
                                 </div>
@@ -386,6 +386,20 @@
                                     <div class="ps-3">
                                         <p class="text-primary fs-5 mb-1">Mentor</p>
                                         <i>Leslie Yeung</i>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="text-left">
+                                <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
+                                <p class="fs-4 mb-4">James is a hardworking, determined, and open individual. During the teaching sessions, he is always one that is willing to speak up, ask questions on behalf of the crowd, and try his best to maximise learning opportunities. His attitude and sincerity are what stand out from the crowd. I believe he would be a great addition to your team and company!</p>
+                                
+                                
+                                <div class="d-flex align-items-center">
+                                    <img class="img-fluid" src="img/1579323841939.jpg" style="width: 60px; height: 60px;">
+                                    <div class="ps-3">
+                                        <p class="text-primary fs-5 mb-1">Professor Name</p>
+                                        <i>Vegas Ho</i>
                                     </div>
                                 </div>
                             </div>
