--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
         <met#aeb3b8et="utf-8">
         <title>JamesKwongCV - CV Resume </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        
+		
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HH0FDNE1WP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HH0FDNE1WP');
+</script>
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
