--- a/index.html
+++ b/index.html
@@ -4,16 +4,7 @@
         <met#aeb3b8et="utf-8">
         <title>JamesKwongCV - CV Resume </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-		
-        <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HH0FDNE1WP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-HH0FDNE1WP');
-</script>
+        
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
@@ -362,6 +353,18 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="col-md-6 mb-4 portfolio-item first">
+                                        <div class="position-relative overflow-hidden mb-2">
+                                            <img class="img-fluid w-100" src="img/pj5.jpg" alt="pf1">
+                                            <div class="portfolio-btn d-flex align-items-center justify-content-center">
+                                                <a href="img/pj5.jpg" data-lightbox="portfolio">
+                                                    <i class="bi bi-plus text-light"></i>
+                                                </a>
+                                                <a href="https://goodqthe123.github.io/Jing-yong-Bookshop.github.io/" target="_blank" class="pfg">View</a> 
+                                               <!--  <button class="pfg" onclick="document.location='https://goodqthe123.github.io/capstone_colmar_assets.github.io/'"    target="_blank">View</button>-->
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -505,3 +508,4 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
