--- a/index.html
+++ b/index.html
@@ -377,6 +377,18 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="col-md-6 mb-4 portfolio-item first">
+                                        <div class="position-relative overflow-hidden mb-2">
+                                            <img class="img-fluid w-100" src="img/pj6.jpg" alt="pf1">
+                                            <div class="portfolio-btn d-flex align-items-center justify-content-center">
+                                                <a href="img/pj6.jpg" data-lightbox="portfolio">
+                                                    <i class="bi bi-plus text-light"></i>
+                                                </a>
+                                                <a href="https://goodqthe123.github.io/bitcoinAPI.github.io/" target="_blank" class="pfg">View</a> 
+                                               <!--  <button class="pfg" onclick="document.location='https://goodqthe123.github.io/capstone_colmar_assets.github.io/'"    target="_blank">View</button>-->
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -520,3 +532,4 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
