--- a/index.html
+++ b/index.html
@@ -226,6 +226,43 @@
                     </section>
                     <!-- Expericence End -->
 
+
+                     <!-- Expericence Start -->
+                     <section class="py-5 wow fadeInUp" data-wow-delay="0.1s">
+                        <h1 class="title pb-3 mb-5">Working Expericence</h1>
+                        <div class="border-start border-2 border-light pt-2 ps-5">
+                            <div class="position-relative mb-4">
+                                <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
+                                <h5 class="mb-1">Palmecotech - HK </h5>
+                                <p class="mb-2">FrontEnd Web-Developer | digital marketing |<small> Feb 2023 - May 2023</small></p>
+                                <br>
+                                <p>- Create web pages for Palmeco, including the company website and product pages, using front-end technologies such as HTML, CSS, and JavaScript.<br>
+                                    - Manage social media accounts, regularly update content, interact with users, and increase brand exposure and sales.<br>
+                                    - Optimize the SEO of website and social media content to improve search engine rankings and website traffic.<br>
+                                    - Collaborate closely with other team members, including designers, to ensure high quality and integrity of the website and marketing activities.</p>
+                            </div>
+                            <div class="position-relative mb-4">
+                                <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
+                                <h5 class="mb-1">Ambulanceman </h5>
+                                <p class="mb-2">Fire Service Department  | <small>Jan 2021 - July 2022</small></p>
+                                <br>
+                                <p>- Disciplined deployment of emergency ambulance services<br>
+                                    - In critical situations, giving patients the best possible care<br>
+                                    - Reassureing the patient' s emotions </p>
+                            </div>
+                            <div class="position-relative mb-4">
+                                <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
+                                <h5 class="mb-1">Wealth Management Consultant</h5>
+                                <p class="mb-2">Wealth Management Consultant  | <small>Jan 2019 - Dec 2019</small></p>
+                                <br>
+                                <p>- study terms and policies of the financial plan to ensure customers can make claims in a timely manner<br>
+                                    - Present customers to participate in insurance products<br>
+                                    - Teamwork and Positive Thinking<br></p>
+                            </div>
+                        </div>
+                    </section>
+                    <!-- Expericence End -->
+                    
                     <!-- Subscribe Start -->
                   
                     <!-- Subscribe End -->
@@ -281,6 +318,18 @@
                                     </div>
                                 </div>
                                 <div class="row portfolio-container">
+                                    <div class="col-md-6 mb-4 portfolio-item first">
+                                        <div class="position-relative overflow-hidden mb-2">
+                                            <img class="img-fluid w-100" src="img/pf7.png" alt="pf1">
+                                            <div class="portfolio-btn d-flex align-items-center justify-content-center">
+                                                <a href="img/pf7.png" data-lightbox="portfolio">
+                                                    <i class="bi bi-plus text-light"></i>
+                                                </a>
+                                                <a href="https://goodqthe123.github.io/palmecotach-hk.github.io/" target="_blank" class="pfg">View</a> 
+                                              <!---  <button class="pfg" onclick="document.location='https://victoryeung0725.github.io/Marvel-Movie-Project/hawkeye.html'"target="_blank">View</button>-->
+                                            </div>
+                                        </div>
+                                    </div>
                                     <div class="col-md-6 mb-4 portfolio-item first">
                                         <div class="position-relative overflow-hidden mb-2">
                                             <img class="img-fluid w-100" src="img/pf1.jpg" alt="pf1">
