--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                                 <h5 class="mb-1">Palmecotech - HK </h5>
                                 <p class="mb-2">FrontEnd Web-Developer | digital marketing |<small> Feb 2023 - May 2023</small></p>
                                 <br>
-                                <p>- Create web pages for Palmeco, including the company website and product pages, using front-end technologies such as HTML, CSS, and JavaScript.<br>
+                                <p>- Independently create web pages for Palmeco, including the company website and product pages, using front-end technologies such as HTML, CSS, and JavaScript.(Note : The first item of Portfolio)<br>
                                     - Manage social media accounts, regularly update content, interact with users, and increase brand exposure and sales.<br>
                                     - Optimize the SEO of website and social media content to improve search engine rankings and website traffic.<br>
                                     - Collaborate closely with other team members, including designers, to ensure high quality and integrity of the website and marketing activities.</p>
